[tool.poetry]
name = "search-the-world"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
flask = "^1.1.2"
autocorrect = "^2.3.0"
flask-compress = "^1.9.0"
html-text = "^0.5.2"
extruct = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
